// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Delete Modal component > renders basic modal 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r0::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r0::positioner"
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-ods="modal-content"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r0::content"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1qhu0_2 _modal-header--critical_1qhu0_14"
      >
        <button
          aria-label="Close"
          class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _modal-header__close_1qhu0_26"
          data-ods="button"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r0::close"
          type="button"
        >
          <span
            class="_icon_10c23_2 _icon--xmark_10c23_562"
            data-ods="icon"
            role="presentation"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
        data-ods="modal-body"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
          data-ods="text"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-ods="text"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--ghost_1koyw_151 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--default_1koyw_49 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders loading modal 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r1::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r1::positioner"
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-ods="modal-content"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r1::content"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1qhu0_2 _modal-header--critical_1qhu0_14"
      >
        <button
          aria-label="Close"
          class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _modal-header__close_1qhu0_26"
          data-ods="button"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r1::close"
          type="button"
        >
          <span
            class="_icon_10c23_2 _icon--xmark_10c23_562"
            data-ods="icon"
            role="presentation"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
        data-ods="modal-body"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
          data-ods="text"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex justify-center my-5"
          data-testid="spinner"
        >
          <span
            class="_spinner_o7c7y_10 _spinner--primary_o7c7y_29 _spinner--md_o7c7y_20"
            data-ods="spinner"
            role="progressbar"
          >
            <svg
              aria-hidden="true"
              class="_spinner__svg_o7c7y_32"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="24"
                width="24"
              />
              <g
                transform="translate(-237.694 -93.932)"
              >
                <path
                  d="M-5236.305-4108.069h0v-2a9.011,9.011,0,0,0,9-9,9.01,9.01,0,0,0-9-9,9.01,9.01,0,0,0-9,9h-2a10.928,10.928,0,0,1,3.222-7.779,10.928,10.928,0,0,1,7.778-3.221,10.929,10.929,0,0,1,7.779,3.221,10.932,10.932,0,0,1,3.221,7.777,10.928,10.928,0,0,1-3.221,7.778A10.931,10.931,0,0,1-5236.305-4108.069Z"
                  transform="translate(5486 4225)"
                />
                <circle
                  cx="1"
                  cy="1"
                  r="1"
                  transform="translate(248.694 114.932)"
                />
                <circle
                  cx="1"
                  cy="1"
                  r="1"
                  transform="translate(238.694 104.932)"
                />
              </g>
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with children content 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r4::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r4::positioner"
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-ods="modal-content"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r4::content"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1qhu0_2 _modal-header--critical_1qhu0_14"
      >
        <button
          aria-label="Close"
          class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _modal-header__close_1qhu0_26"
          data-ods="button"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r4::close"
          type="button"
        >
          <span
            class="_icon_10c23_2 _icon--xmark_10c23_562"
            data-ods="icon"
            role="presentation"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
        data-ods="modal-body"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
          data-ods="text"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-ods="text"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
            <div>
              Additional content
            </div>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--ghost_1koyw_151 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--default_1koyw_49 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with custom service type 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r3::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r3::positioner"
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-ods="modal-content"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r3::content"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1qhu0_2 _modal-header--critical_1qhu0_14"
      >
        <button
          aria-label="Close"
          class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _modal-header__close_1qhu0_26"
          data-ods="button"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r3::close"
          type="button"
        >
          <span
            class="_icon_10c23_2 _icon--xmark_10c23_562"
            data-ods="icon"
            role="presentation"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
        data-ods="modal-body"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
          data-ods="text"
        >
          Résilier Custom Service ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <p
              class="_text--paragraph_1aw48_54"
              data-ods="text"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--ghost_1koyw_151 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--default_1koyw_49 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Delete Modal component > renders modal with error 1`] = `
<body>
  <div />
  <div
    class="_modal-backdrop_inusz_22"
    data-part="backdrop"
    data-scope="dialog"
    data-state="open"
    dir="ltr"
    id="dialog::r2::backdrop"
  />
  <div
    class="_modal-positioner_inusz_29"
    data-part="positioner"
    data-scope="dialog"
    dir="ltr"
    id="dialog::r2::positioner"
  >
    <div
      aria-describedby=""
      aria-labelledby=""
      aria-modal="true"
      class="_modal-content_inusz_35"
      data-ods="modal-content"
      data-part="content"
      data-scope="dialog"
      data-state="open"
      dir="ltr"
      id="dialog::r2::content"
      role="alertdialog"
      tabindex="-1"
    >
      <div
        class="_modal-header_1qhu0_2 _modal-header--critical_1qhu0_14"
      >
        <button
          aria-label="Close"
          class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _modal-header__close_1qhu0_26"
          data-ods="button"
          data-part="close-trigger"
          data-scope="dialog"
          dir="ltr"
          id="dialog::r2::close"
          type="button"
        >
          <span
            class="_icon_10c23_2 _icon--xmark_10c23_562"
            data-ods="icon"
            role="presentation"
          />
        </button>
      </div>
      <div
        class="_modal-body_3om6u_2 text-left"
        data-ods="modal-body"
      >
        <h4
          class="_text--heading-4_1aw48_31 mb-4"
          data-ods="text"
        >
          Résilier serviceType ?
        </h4>
        <div
          class="flex flex-col text-left"
        >
          <div
            class="flex flex-col gap-4"
          >
            <div
              class="_message_1oosv_2 _message--warning_1oosv_32 _message--default_1oosv_9"
              data-ods="message"
            >
              <span
                class="_icon_10c23_2 _icon--triangle-exclamation_10c23_538 _message-icon_mpgx8_2"
                data-ods="message-icon"
                role="presentation"
              />
              <div
                class="_message-body_fe7x3_2"
                data-ods="message-body"
              >
                L'erreur suivante est survenue : Test error message.
              </div>
              <button
                aria-label="Close"
                class="_button_1koyw_2 _button--neutral_1koyw_83 _button--xs_1koyw_25 _button--ghost_1koyw_151 _message__close_1oosv_25"
                data-ods="button"
                type="button"
              >
                <span
                  class="_icon_10c23_2 _icon--xmark_10c23_562"
                  data-ods="icon"
                  role="presentation"
                />
              </button>
            </div>
            <p
              class="_text--paragraph_1aw48_54"
              data-ods="text"
              data-testid="manager-delete-modal-description"
              id="delete-modal-description"
            >
              La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
            </p>
          </div>
        </div>
        <div
          class="flex justify-end flex-wrap gap-4"
        >
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--ghost_1koyw_151 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-cancel"
            type="button"
          >
            Non, refuser
          </button>
          <button
            class="_button_1koyw_2 _button--critical_1koyw_49 _button--md_1koyw_42 _button--default_1koyw_49 mt-4"
            data-ods="button"
            data-testid="manager-delete-modal-confirm"
            type="button"
          >
            Oui, résilier
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
